package tn.esprit.pi.domain;

public enum EventStatus {
    SCHEDULED, ONGOING, FINISHED, CANCELLED, POSTPONED
}
