package tn.esprit.pi.domain;

import jakarta.persistence.*;
import lombok.*;
import java.time.LocalDate;

@Entity
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
public class OwnedPlayer {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    
    @Enumerated(EnumType.STRING)
    private PlayerStatus status;
    
    private LocalDate acquiredDate;
    
    @ManyToOne
    @JoinColumn(name = "user_id")
    private User user;
    @ManyToOne
    @JoinColumn(name = "player_profile_id")
    private PlayerProfile playerProfile;
    @ManyToOne
    @JoinColumn(name = "virtual_team_id")
    private VirtualTeam virtualTeam;
}
