package tn.esprit.pi.domain;

public enum SportType {
    FOOTBALL, BASKETBALL, TENNIS
}
